--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="servicios">
             <a href="html/canales.html" class="servicio" target="_parent">
                 <h3>Flujos de canales</h3>
-                <p>Acceso a canales en HD y SD, listas estables y seguras.</p>
+                <p>Acceso a canales en HD y SD, listas estables  para Astra M3U8.</p>
             </a>
             <a href="html/servidores.html" class="servicio" target="_parent">
                 <h3>Montaje de Servidores</h3>
