--- a/html/canales.html
+++ b/html/canales.html
@@ -238,6 +238,7 @@
 
             <!-- Carrito de cotización -->
 
+                <!-- Carrito de cotización -->
         <div class="carrito-container">
             <div class="carrito-header">
                 <h3><i class="fas fa-shopping-cart"></i> Canales Seleccionados</h3>
