--- a/html/canales.html
+++ b/html/canales.html
@@ -229,7 +229,28 @@
            <!-- aggregar categorias -->
         
     </section>
-
+                <!-- Carrito flotante -->
+            <div class="floating-cart" id="floatingCart">
+                <div class="cart-icon-container" onclick="toggleCart()">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="cart-counter" id="floatingCartCounter">0</span>
+                </div>
+                <div class="cart-content" id="cartContent">
+                    <div class="cart-header">
+                        <h3>Canales Seleccionados</h3>
+                        <button class="close-cart" onclick="toggleCart()"><i class="fas fa-times"></i></button>
+                    </div>
+                    <div class="cart-items" id="cartItems">
+                        <p class="empty-cart-message">No has seleccionado ningún canal aún</p>
+                    </div>
+                    <div class="cart-actions">
+                        <button class="btn-clear" onclick="limpiarCarrito()">Limpiar Todo</button>
+                        <button class="btn-whatsapp" onclick="enviarWhatsApp()">
+                            <i class="fab fa-whatsapp"></i> Cotizar
+                        </button>
+                    </div>
+                </div>
+            </div>
     <footer>
         <div class="container">
             <p>&copy; 2025 Astratech Systems. Todos los derechos reservados.</p>
