--- a/html/canales.html
+++ b/html/canales.html
@@ -6,6 +6,7 @@
     <title>Lista de Canales - Astratech Systems</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/canales.css">
+    <link rel="stylesheet" href="../css/carrito.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -229,26 +230,19 @@
            <!-- aggregar categorias -->
         
     </section>
-                <!-- Carrito flotante -->
-            <div class="floating-cart" id="floatingCart">
-                <div class="cart-icon-container" onclick="toggleCart()">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-counter" id="floatingCartCounter">0</span>
+            <div class="carrito-container">
+                <div class="carrito-header">
+                    <h3><i class="fas fa-shopping-cart"></i> Canales Seleccionados</h3>
+                    <span id="contador-carrito">0</span>
                 </div>
-                <div class="cart-content" id="cartContent">
-                    <div class="cart-header">
-                        <h3>Canales Seleccionados</h3>
-                        <button class="close-cart" onclick="toggleCart()"><i class="fas fa-times"></i></button>
-                    </div>
-                    <div class="cart-items" id="cartItems">
-                        <p class="empty-cart-message">No has seleccionado ningún canal aún</p>
-                    </div>
-                    <div class="cart-actions">
-                        <button class="btn-clear" onclick="limpiarCarrito()">Limpiar Todo</button>
-                        <button class="btn-whatsapp" onclick="enviarWhatsApp()">
-                            <i class="fab fa-whatsapp"></i> Cotizar
-                        </button>
-                    </div>
+                <div class="carrito-lista" id="lista-carrito">
+                    <p class="carrito-vacio">No has seleccionado ningún canal aún</p>
+                </div>
+                <div class="carrito-acciones">
+                    <button class="btn-limpiar" onclick="limpiarCarrito()">Limpiar</button>
+                    <button class="btn-whatsapp" onclick="enviarWhatsApp()">
+                        <i class="fab fa-whatsapp"></i> Cotizar por WhatsApp
+                    </button>
                 </div>
             </div>
     <footer>
@@ -258,5 +252,6 @@
     </footer>
 
     <script src="../js/canales.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 </html>
